--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -7,7 +7,7 @@ explicit.wait=30
 page.load.timeout=45
 
 # Salesforce Test data (replace with your actual test credentials)
-test.username=saurav67999701@agentforce.com
+test.username=test100@agentforce.com
 test.password=Madmax.11111
 
 # Browser configurations
